sonar fix 1